[package]
name = "account_manager"
version = "0.1.0"
authors = ["sventime <semirazov94@gmail.com>"]
edition = "2021"

[dependencies]
ink = { version = "4.2.0", default-features = false }

scale = { package = "parity-scale-codec", version = "3", default-features = false, features = ["derive"] }
scale-info = { version = "2.6", default-features = false, features = ["derive"], optional = true }

openbrush = { git = "https://github.com/Brushfam/openbrush-contracts", tag = "4.0.0-beta", default-features = false, features = ["ownable", "upgradeable", "access_control"] }
archisinal_lib = { path = "../..", default-features = false }
creator = { path = "../creator", default-features = false, features = ["ink-as-dependency"] }
user = { path = "../user", default-features = false, features = ["ink-as-dependency"] }

[dev-dependencies]
ink_e2e = "4.2.0"
test_helpers = { path = "../../utils/test_helpers", default-features = false }

[lib]
path = "lib.rs"

[features]
default = ["std"]
std = [
    "ink/std",
    "scale/std",
    "scale-info/std",
    "archisinal_lib/std",
    "openbrush/std",
]
ink-as-dependency = []
e2e-tests = []
